@startuml
' configuration
hide circle
skinparam linetype ortho


entity "attributes" as attributes {
    **id**: int
    parent_id: int <<FK>>
    --
    * tag: varchar
    text: varchar
    priority: smallint
    allow_as_fiter: bool
    allow_for_dataset: bool
    allow_for_genotype: bool
    allow_for_performance: bool
    allow_for_sample: bool
    allow_values: bool
    values_are_numeric: bool
    values_are_feature_labels: bool
    values_are_genotype_labels: bool
    required_for_dataset_state: smallint
    is_unit: bool
}

entity "traits" as traits {
    **id**: int
    attribute_id: int <<FK>>
    --
    * tag: varchar
    text: varchar
    * keyword: varchar
    description: text
}

entity "nm_traits_datasets" as nm_traits_datasets {
    **trait_node_id**: bigint <<FK>>
    **dataset_id**: int <<FK>>
}

entity "nm_traits_samples" as nm_traits_samples {
    **trait_node_id**: bigint <<FK>>
    **sample_id**: bigint <<FK>>
}

entity "genotype" as genotype {
    **id**: int
    trait_node_id: int
    --
    * label: varchar
    name: varchar
    description: varchar
    is_selectable: varchar
    created_by: int
    created_on: timestamp
}

entity "trait_nodes" as trait_nodes {
    **id**: bigint
    trait_id: bigint
    parent_node: bigint <<FK>>
    --
    * name: varchar
    trait_value: varchar
}


trait_nodes }|--|| nm_traits_datasets
trait_nodes }|--|| nm_traits_samples
trait_nodes }|--|| genotype

traits }o--|| trait_nodes
trait_nodes }o--|| trait_nodes

traits }|--|| attributes
attributes }o--|| attributes


@enduml
